--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <script>
 $(
     function() {
-        $('#btn').click(query);
+        $('#btn').click(proQuery);
     }
 );
 
@@ -35,6 +35,21 @@ function bad(jqXHR, textStatus, errorThrown) {
     $('#res').text(errorThrown);
 }
 
+function promiseGet(url) {
+    return new Promise(
+            function(resolve, reject) {
+                $.ajax(url).done(resolve).error(reject);
+            }
+                    );
+}
+
+function proQuery() {
+    promiseGet('data?inp=' + $('#inp').val())
+            .then( function(res) { return promiseGet('processdata?data=' + res); } )
+            .then( function(res) { $('#res').text(res); return res; } )
+            .then( function(res) { $('<h3/>').text(res).appendTo("body"); return res; })
+            .catch( function(err) { alert(err); } );
+}
 
 </script>
         
